namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nova-test
  labels:
    app: nginx-demo
