service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: nova-test
  labels:
    app: nginx-demo
spec:
  selector:
    app: nginx-demo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
